# network-echos

./: 404.html  LICENSE  README.md  __init__.py  getting-started.ipynb  index.html  mkdocs.yml  nim.ipynb  notebook.ipynb  objects.inv  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  🐞-bug-report.md  💡-enhancement-suggestion.md  💡-new-enhancement.md
.github/workflows/: mkdocs.yml  pytest.yml  ruff.yaml  ruff.yml  run-tests.yml
api-reference/core/: index.html
api-reference/plot/: index.html
concepts/model/: index.html
concepts/notation/: index.html
concepts/overview/: index.html
docs/: dynamics.md  index.md  model.md
docs/API reference/: core.md
docs/api-reference/: core.md  plot.md
docs/concepts/: model.md  notation.md  overview.md
docs/javascripts/: mathjax.js
docs/user-guide/: getting-started.ipynb  getting-started.md
examples/: getting-started.ipynb  notebook.ipynb
model/: functions.py
netecho/: core.py  plot.py
netechos/: core.py  plot.py
nim/: core.py  model.py  plot.py
search/: search_index.json
src/netechos/: core.py  plot.py
tests/: test_core.py
user-guide/getting-started/: index.html
utils/: functions.py
